# MathLib

./: .gitignore  MathLibrary.sln
MathLibrary/: MathLibrary.cpp  MathLibrary.vcxproj  MathLibrary.vcxproj.filters
mylib/: CMakeLists.txt
sample/src/: main.cpp
